# clask

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  clask.hpp  compile_flags.txt  main.cxx  test.cxx
.github/workflows/: docker.yaml  gtest.yml  test.yaml  test.yml
clask/: CMakeLists.txt  core.hpp  version.h
example/: CMakeLists.txt
example/file/: CMakeLists.txt  compile_flags.txt  main.cxx
example/file/public/: index.html
example/json/: CMakeLists.txt  Makefile  main.cxx
example/json/public/: index.html
example/login/: CMakeLists.txt  Makefile  index.html  main.cxx
example/sqlite3/: CMakeLists.txt  Makefile  index.html  main.cxx  schema.sql
example/static/: CMakeLists.txt  Makefile  main.cxx
example/static/public/: index.html
example/static/public/js/: app.js
example/stream/: CMakeLists.txt  main.cxx
example/stream/public/: index.html
example/upload/: CMakeLists.txt  Makefile  main.cxx
example/upload/public/: index.html
